--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.2.1",
+    "@trevoreyre/autocomplete-vue": "^2.2.0",
     "core-js": "^3.19.3",
     "node-sass": "^6.0.1",
     "nuxt": "^2.15.0",
@@ -25,6 +26,7 @@
     "swiper": "^7.4.1",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-cookies": "^1.7.4",
     "vue-read-more": "^1.1.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
